res_pjsip_history.c: Fix to stop SIGSEGV when IPv6 addresses are encountered.

Changed source and destination address fields in struct
pjsip_history_entry so that they are long enough to hold an IPv6
address.

ASTERISK-28854

Change-Id: Id65bb9aa961e9ecbcb500815e18170f774e34d3e